--- a/myLocalSettings/config.toml
+++ b/myLocalSettings/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://localhost:1313/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "myLocalSettings"
 theme = "ananke"
